--- a/src/index.css
+++ b/src/index.css
@@ -160,15 +160,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   padding: 2px 10px;
   border-radius: 0 0px 10px 10px;
-  bottom: -29px;
+  top: 100px;
   font-size: 20px;
-}
-
-@media(max-width: 767px) {
-  .admin-tab {
-    top: 0;
-    bottom: auto;
-  }
 }
 
 /* Main Content Wrapper */
@@ -352,4 +345,9 @@ h1, h2, h3, h4, h5, h6 {
   -ms-animation: rotate 3s linear infinite;
   -o-animation: rotate 3s linear infinite;
   animation: rotate 3s linear infinite;
+}
+
+/* Helper class */
+.relative {
+  position: relative;
 }
