--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,33 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none; 
 }
 
+.order-summary-panel {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f3f3f3;
+  position: relative;
+  border-radius: 10px;
+}
+
+@media(max-width: 767px) {
+  .order-summary-panel {
+    width: 100%;
+  }
+  
+  .order-summary-panel h2 {
+    font-size: 30px;
+  }
+}
+
+.order-summary-panel h6 {
+  text-align: left;
+}
+
+.order-summary-panel h6 span {
+  font-family: 'Roboto', sans-serif;
+}
+
 /* Login form */
 .login-form {
   padding: 20px;
