--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,14 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+.footer a {
+  color: #fff;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
 /* Home Component */
 .featured-img {
   width: 100%;
